[gd_scene load_steps=7 format=3 uid="uid://tx37kg2do8j"]

[ext_resource type="Script" uid="uid://bdyyjmti00e7y" path="res://objects/scripts/collectible.gd" id="1_trxjm"]
[ext_resource type="Texture2D" uid="uid://cuf2y50w1s0cc" path="res://assets/objects/cheese_curd.png" id="2_1x3e1"]
[ext_resource type="Script" uid="uid://fxp4wqoutmr8" path="res://objects/scripts/collectors/cheese_curd.gd" id="3_na0el"]
[ext_resource type="AudioStream" uid="uid://divo1etyw4jkc" path="res://assets/sound/crate_break.wav" id="4_na0el"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yyx46"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1x3e1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1sol"]
radius = 52.0

[node name="CheeseCurd" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_trxjm")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yyx46")

[node name="Collector" type="Node2D" parent="."]
script = ExtResource("3_na0el")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h1sol")

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_na0el")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CollectSound" to="." method="_on_collect_sound_finished"]
